--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
       </div>
 
       <div class="block">
-        <div class="label">设备朝向（方位角）</div>
+        <div class="label">设备朝向</div>
         <div class="value small" id="orientation">检测中…</div>
       </div>
 
@@ -514,7 +514,7 @@
 
     <!-- 摄像头取景 -->
     <div class="panel camera-panel desktop-only">
-      <div class="title">摄像</div>
+      <div class="title">预 览</div>
       <div class="video-container">
         <video id="video" autoplay playsinline muted></video>
       </div>
@@ -522,10 +522,10 @@
 
     <!-- 照片预览 -->
     <div class="panel preview-panel desktop-only">
-      <div class="title">预览</div>
+      <div class="title">影 像</div>
       <div class="preview-container" id="previewContainer">
-        <div class="placeholder">照片预览区域</div>
-        <img id="preview" style="display: none;" alt="照片预览">
+        <div class="placeholder">照片展示区域</div>
+        <img id="preview" style="display: none;" alt="照片展示">
       </div>
       <a class="download-link" id="download" style="display: none;">下载图片</a>
     </div>
